# lab1_ws

./: README.md  frames_2025-02-26_16.03.07.gv
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/lab1_1/lib/lab1_1/: basic_model.py  bicycle_model.py
install/lab1_1/share/ament_index/resource_index/package_run_dependencies/: lab1_1
install/lab1_1/share/lab1_1/: package.ps1  package.sh  package.zsh
install/lab1_1/share/lab1_1/cmake/: lab1_1Config.cmake
install/lab1_1/share/lab1_1/descriptions/: robot.urdf  robot.urdf.xacro
install/lab1_1/share/lab1_1/launch/: spawn_robot.launch.py
install/lab1_1/share/lab1_1/scripts/: inverse_kinematics.py  no_slip_model.py  plot_odom.py  yaw_rate.py
install/lab1_1/share/lab1_1/worlds/: basic.world
install/lab1_2/lib/lab1_2/: dummy_script.py  pid.py  pure_pursuit.py
install/lab1_2/share/ament_index/resource_index/parent_prefix_path/: lab1_2
install/lab1_2/share/lab1_2/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/lab1_2/share/lab1_2/config/: path.yaml
install/lab1_3/share/lab1_3/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/lab1_3/share/lab1_3/cmake/: lab1_3Config.cmake
log/: latest_build  latest_list
src/lab1_1/: CMakeLists.txt  package.xml
src/lab1_1/config/: controller.yaml
src/lab1_1/descriptions/: robot.urdf
src/lab1_1/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/lab1_1/install/lab1_1/local/lib/python3.10/dist-packages/lab1_1-0.0.1-py3.10.egg-info/: PKG-INFO
src/lab1_1/install/lab1_1/share/lab1_1/: local_setup.sh  package.bash  package.dsv  package.sh  package.xml
src/lab1_1/install/lab1_1/share/lab1_1/descriptions/: robot.urdf
src/lab1_1/install/lab1_1/share/lab1_1/launch/: world.launch.py
src/lab1_1/install/lab1_1/share/lab1_1/scripts/: basic_model.py  single_track.py  tf_publisher.py  yaw_rate.py
src/lab1_1/launch/: spawn_robot.launch.py  world.launch.py
src/lab1_1/log/: latest_build
src/lab1_1/rviz/: config_rviz.rviz
src/lab1_1/scripts/: basic_model.py  dummy_script.py  inverse_kinematics.py  lab1_1_basic_model.py  lab1_1_double_track.py  lab1_1_no_slip_model.py  lab1_1_single_track.py  lab1_1_yaw_rate.py  lab1_2_pid.py  lab1_2_pure_pursuit.py  lab1_2_stanley.py  map.py  no_slip_model.py  odom_publisher.py  path_trackling.py  plot_auto_drive.py  plot_path.py  single_track.py  yaw_rate.py
src/lab1_1/src/: cpp_node.cpp
src/lab1_2/: CMakeLists.txt  package.xml
src/lab1_2/scripts/: lab1_2_lmpc.py  lab1_2_pid.py  lab1_2_pure_pursuit.py  lab1_2_stanley.py  pid.py  pure_pursuit.py
src/lab1_2/src/: cpp_node.cpp
src/lab1_3/: CMakeLists.txt  package.xml
src/lab1_3/scripts/: dummy_script.py  lab1_3_ekf_node.py  lab1_3_gps_mulator.py
src/lab1_3/src/: cpp_node.cpp
(+3 files in other folders)
